[package]
edition = "2024"
name = "btt-source-exporter"
version = "0.1.0"

[dependencies]
csv = "1.3.1"
ironworks = {version = "0.4.1", features = ["excel", "sestring", "sqpack"], git = "https://github.com/ackwell/ironworks"}
regex = "1.12.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yml = "0.0.12"
tar = "0.4"
zstd = "0.13"
